<resources>
    <!-- App Info -->
    <string name="app_name" translatable="false">ChatApp</string>

    <!-- Strings related to register and login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="new_message">Send new message</string>

    <!-- Strings related to AuthFragment -->
    <string name="auth_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="auth_username">Username: %s</string>
    <string name="signed_out">You are not signed in. To use this sample, first navigate to the Email/Password example to sign in and then return here to enroll in multi-factor auth.</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="prompt_username">Username</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="reload">Reload</string>

    <string name="action_register">Create account</string>
    <string name="action_login">Login</string>
    <string name="back_to_exit">Press back again to exit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="already_registered">Already registered?</string>
    <string name="not_registered">Not registered?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="login_success">Welcome %s!</string>
    <string name="nav_account">My Account</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Logout</string>

    <string name="tab_messages">Messages</string>
    <string name="tab_friends">Friends</string>
    <string name="fab_new_group">Create Group</string>
    <string name="fab_add_friend">Add Friend</string>

    <string name="dialog_add_friend_title">Add a friend</string>
    <string name="dialog_add_friend_success">Friend added</string>
    <string name="dialog_add_friend_accept">Add</string>
    <string name="dialog_add_friend_not_found">User not found</string>
    <string name="dialog_add_friend_edittext_hint">Enter your friend\'s username</string>

    <string name="dialog_remove_friend_title">Remove friend: %s?</string>
    <string name="dialog_remove_friend_success">Friend removed</string>
    <string name="dialog_remove_friend_accept">Remove</string>

    <string name="dialog_accept">Accept</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="button_remove_friend">Remove Friend</string>

    <string name="menu_new_group">New Group</string>
    <string name="menu_group">Group</string>
    <string name="menu_account">My Account</string>
    <string name="menu_settings">Settings</string>

    <string name="group_name">Group Name</string>

    <string name="hint_message">Enter a message…</string>
    <string name="button_send_message">Send message</string>
    <string name="fragment_group_not_connected">Not connected to another device</string>
    <string name="message_received">Message Received in Group: %s</string>
    <string name="message_sent">Message Sent</string>

    <string name="no_group_found">No Group Found</string>
    <string name="menu_show_members">Group Members</string>
    <string name="menu_leave_group">Leave Group</string>
    <string name="menu_add_members">Add Members</string>
    <string name="button_remove_member">Remove Member</string>
    <string name="account_username">Username</string>
    <string name="account_email">Email</string>
    <string name="account_change_password">Change Password</string>
    <string name="account_delete_account">Delete Account</string>
    <string name="group_add_members">Add Members</string>

    <string name="dialog_remove_member_title">Remove member: %s?</string>

    <!-- Preference Categories Titles -->
    <string name="pref_display_title">Display</string>
    <string name="pref_about_title">About</string>

    <!-- Preferences Titles -->
    <string name="pref_theme_title">Theme</string>
    <string name="pref_app_version_title">App Version</string>
</resources>